deployment/gce/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: geloest
  namespace: geloest
spec:
  type: NodePort
  selector:
    app: geloest
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
