deployment/gce/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: geloest
  namespace: geloest
  annotations:
    kubernetes.io/ingress.global-static-ip-name: geloest
    networking.gke.io/managed-certificates: geloest
    kubernetes.io/ingress.class: "gce"
    networking.gke.io/v1beta1.FrontendConfig: http-to-https-redirect
spec:
  defaultBackend:
    service:
      name: geloest
      port:
        number: 80
